Wed Jun 22 02:39:54 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP.post_form): Do not ignore query part of
	  the given URI to post. See #655.

	* test/net/http/test_http.rb, test/net/http/utils.rb: Test it.

Wed Jun 22 01:28:13 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* test/openssl/test_x509store.rb (test_set_errors): Redhat is
	  distributing a patched version of OpenSSL that allows multiple CRL
	  for a key (multi-crl.patch.) Make test pass on such env. See #4122,
	  #4554.

Tue Jun 21 21:50:37 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* lib/webrick/httpresponse.rb (HTTPResponse#setup_header): Close 
	  HTTP/1.1 connection when returning an IO object as response body 
	  without setting HTTPResponse#chunked to true. See #855 no.1.

	* test/webrick/test_httpserver.rb: Test it.

Tue Jun 21 21:27:34 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* internal.h: move rb_thread_io_blocking_region() declaration
	  from intern.h to internal.h. It's still experimental API and
	  need more discussion. [ruby-dev:43698]
	* include/ruby/intern.h: ditto.

	* ext/socket/rubysocket.h: include internal.h.
	* ext/socket/depend: add internal.h dependency.
	* ext/socket/extconf.rb: add $INCFLAGS to topdir.

Tue Jun 21 20:38:47 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (datetime_s_*): canonicalize 24 o'clock.

Tue Jun 21 19:46:23 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_thread.rb (TestThread#test_priority): enable
	  this test again. Current GVL respect thread priority rather
	  than past.
	  
Tue Jun 21 13:25:35 2011  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/readline.c (readline_getc): applied a patch in
	  #3827 by by Akio Tajima <artonx AT yahoo.co.jp>. (see #3827)

Tue Jun 21 13:16:31 2011  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/extconf.rb: fixed bug, specify --disable-libedit
	  then disable libedit, does not specify then check readline and